--- a/170516/Views/Home/Index.cshtml
+++ b/170516/Views/Home/Index.cshtml
@@ -92,7 +92,7 @@
                                 Cras sit amet nibh libero. Nulla vel metus scelerisque.
                             </div>
                         </div>
-                        <p><a href="@Url.Action("About","Home")" class="btn btn-default-transparent btn-animated">Xem Tiếp <i class="fa fa-arrow-right pl-10"></i></a></p>
+                        <p><a href="@Url.Action("About","Home")" class="btn btn-default btn-animated">Xem Tiếp <i class="fa fa-arrow-right pl-10"></i></a></p>
                     </div>
                 </div>
             </div>
