--- a/170516/Views/Product/ViewProductDetail.cshtml
+++ b/170516/Views/Product/ViewProductDetail.cshtml
@@ -18,6 +18,7 @@
         <div class="container">
             <div class="row">
                 <div class="main col-md-12">
+                    @Html.HiddenFor(model => model.ProductID)
                     <h1 class="page-title">@Model.ProductName</h1>
                     <div class="separator-2"></div>
                     <div class="row">
@@ -48,7 +49,7 @@
                                     <div class="col-md-4">
                                         <div class="form-group">
                                             <label>Quantity</label>
-                                            <input type="text" class="form-control" value="1">
+                                            <input type="text" id="productInCartQuantity" class="form-control" value="1">
                                         </div>
                                     </div>
                                     <div class="col-md-4">
@@ -66,7 +67,7 @@
                                 <span class="product price"><i class="fa fa-tag pr-10"></i>99.00 đ</span>
                                 <span class="product price" style="margin-left: 5px;color: #7f8c8d;font-size: 15px;"><del>50.00 đ</del></span>
                                 <div class="product elements-list pull-right clearfix">
-                                    <input type="submit" value="Add to Cart" class="margin-clear btn btn-default">
+                                    <input type="button" id="addToCartBtn" value="Add to Cart" class="margin-clear btn btn-default">
                                 </div>
                             </div>
                         </div>
@@ -274,15 +275,15 @@
 
 @section Scripts
 {
-    <script>
-        $(document).ready(function () {
-            $(".owl-carousel").owlCarousel({
-                navigation: false, // Show next and prev buttons
-                lazyLoad: true,
-                slideSpeed: 300,
-                paginationSpeed: 400,
-                singleItem: true
+    @*<script>
+            $(document).ready(function () {
+                $(".owl-carousel").owlCarousel({
+                    navigation: false, // Show next and prev buttons
+                    lazyLoad: true,
+                    slideSpeed: 300,
+                    paginationSpeed: 400,
+                    singleItem: true
+                });
             });
-        });
-    </script>
+        </script>*@
 }
