--- a/170516/Views/Product/_PartialCart.cshtml
+++ b/170516/Views/Product/_PartialCart.cshtml
@@ -1,31 +1,28 @@
 ﻿<!-- put the cart in here -->
+@model _170516.Models.CartViewModel
 <table class="table table-hover">
     <thead>
         <tr>
-            <th class="quantity">QTY</th>
-            <th class="product">Product</th>
-            <th class="amount">Subtotal</th>
+            <th class="quantity">Số lượng</th>
+            <th class="product">Sản phẩm</th>
+            <th class="amount">Tổng tiền</th>
         </tr>
     </thead>
     <tbody>
+        @if (Model.Products.Any())
+        {
+            foreach (var item in Model.Products)
+            {
+                <tr>
+                    <td class="quantity">@item.Quantity</td>
+                    <td class="product"><a href="@Url.Action("ViewProductDetail","Product", new {id = @item.ProductId })">@item.ProductName</a><span class="small"></span></td>
+                    <td class="amount">@item.Price.ToString("0.##") đ</td>
+                </tr>
+            }
+        }
         <tr>
-            <td class="quantity">2 x</td>
-            <td class="product"><a href="shop-product.html">Android 4.4 Smartphone</a><span class="small">4.7" Dual Core 1GB</span></td>
-            <td class="amount">$199.00</td>
-        </tr>
-        <tr>
-            <td class="quantity">3 x</td>
-            <td class="product"><a href="shop-product.html">Android 4.2 Tablet</a><span class="small">7.3" Quad Core 2GB</span></td>
-            <td class="amount">$299.00</td>
-        </tr>
-        <tr>
-            <td class="quantity">3 x</td>
-            <td class="product"><a href="shop-product.html">Desktop PC</a><span class="small">Quad Core 3.2MHz, 8GB RAM, 1TB Hard Disk</span></td>
-            <td class="amount">$1499.00</td>
-        </tr>
-        <tr>
-            <td class="total-quantity" colspan="2">Total 8 Items</td>
-            <td class="total-amount">$1997.00</td>
+            <td class="total-quantity" colspan="2">Có @Model.Products.Count sản phẩm trong giỏ hàng</td>
+            <td class="total-amount">@Model.GrandTotal.ToString("0.##") đ</td>
         </tr>
     </tbody>
 </table>
